HelloUltraviolet/Fixtures/RejectedSource/Comptime/SpliceIdentifierStructuralName/Expected.uv
//! Expected diagnostic metadata for the SpliceIdentifierStructuralName rejected-source specimen.

expectedDiagnostic("E-CTE-0220", "requirement.22.SpliceIdentifierPositionRestrictions")
